--- a/css/style.css
+++ b/css/style.css
@@ -90,7 +90,7 @@ body {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    margin-top: 10px;
+    padding: 10px;
 }
 .feature {
     background: white;
@@ -103,4 +103,42 @@ body {
 }
 .feature p {
     color: rgba(0,0,0,0.5)
+}
+.foodpic {
+    width: 400px;
+}
+.about {
+    background: white;
+    padding: 50px;
+    display: grid;
+    gap: 20px;
+    grid-template-columns: 400px 1fr;
+    align-items: center;
+}
+.gallery {
+    display:grid;
+    gap: 20px;
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+.gallery img{
+    width: 100%;
+
+}.gallery h2 {
+    display: grid;
+    grid-column: 1 /-1;
+    grid-template-columns: 1fr auto 1fr;
+    gap: 20px;
+    align-items: center;
+}
+.gallery h2::before{
+    display: block;
+    content: "";
+    height: 20px;
+    background: linear-gradient(to left, var(--yellow), transparent);
+}
+.gallery h2::after{
+    display: block;
+    content: "";
+    height: 20px;
+    background: linear-gradient(to right, var(--yellow), transparent);
 }
